--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,9 @@ find_package(Threads)##增加线程支持
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 #set(SOURCE_FILES src/main.cpp)
-FILE(GLOB SOURCE_FILES "./**/*.cpp")
-add_executable(linuxc ${SOURCE_FILES} src/handlers/tty_handler.h src/handlers/tty_handler.cpp)
+message(STATUS "source path ${PROJECT_SOURCE_DIR}")
+FILE(GLOB_RECURSE SOURCE_FILES  ${PROJECT_SOURCE_DIR} "src/*.cpp")
+message(STATUS "source files ${SOURCE_FILES}")
+add_executable(linuxc ${SOURCE_FILES} src/mod/Dispatcher.cpp src/mod/Dispatcher.h)
 target_link_libraries(linuxc ${LIBUV}/libuv.a)
 target_link_libraries(linuxc ${CMAKE_THREAD_LIBS_INIT})
