--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 message(STATUS "source path ${PROJECT_SOURCE_DIR}")
 FILE(GLOB_RECURSE SOURCE_FILES  ${PROJECT_SOURCE_DIR} "src/*.cpp")
 message(STATUS "source files ${SOURCE_FILES}")
-add_executable(linuxc ${SOURCE_FILES} src/mod/Dispatcher.cpp src/mod/Dispatcher.h)
+add_executable(linuxc ${SOURCE_FILES} src/mod/absSelection.cpp src/mod/absSelection.h src/mod/rootSelection.cpp src/mod/rootSelection.h)
 target_link_libraries(linuxc ${LIBUV}/libuv.a)
 target_link_libraries(linuxc ${CMAKE_THREAD_LIBS_INIT})
